--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier-eslint": "^6.2.0",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.43.4",
-    "react-native-extended-stylesheet": "^0.4.0"
+    "react-native-extended-stylesheet": "^0.4.0",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
